file renaming in sponge_box and mth_rand added to math module

--- a/utility/forcing/sponge_box/makefile_usr.inc
+++ b/utility/forcing/sponge_box/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/spongeb.o        :spongeb.f;         $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/spongebx.o        :spongebx.f;         $(F77) -c $(FL2) -I./ $< -o $@
