--- a/tools/baseflow/sfd/makefile_usr.inc
+++ b/tools/baseflow/sfd/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/sfd.o                  :sfd.f;                              $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/sfd.o             :sfd.f SFD;                    $(F77) -c $(FL2) $< -o $@
