--- a/io/checkpoint/makefile_usr.inc
+++ b/io/checkpoint/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/chkpoint.o             :chkpoint.f;                         $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/chkpoint.o        :chkpoint.f CHKPOINTD;         $(F77) -c $(FL2) -I./ $< -o $@
