--- a/driver/runparam/makefile_usr.inc
+++ b/driver/runparam/makefile_usr.inc
@@ -1,1 +1,2 @@
-$(OBJDIR)/runparam.o        :runparam.f;                             $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/rprm_block.o      :rprm_block.f RPRMD;                     $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/rprm.o            :rprm.f RPRMD MNTRLP;                    $(F77) -c $(FL2) -I./ $< -o $@
