--- a/driver/frame/monitor/makefile_usr.inc
+++ b/driver/frame/monitor/makefile_usr.inc
@@ -1,2 +1,2 @@
 $(OBJDIR)/mntrlog_block.o   :mntrlog_block.f MNTRLOGD;               $(F77) -c $(FL2) -I./ $< -o $@
-$(OBJDIR)/mntrlog.o         :mntrlog.f MNTRLOGD;                     $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/mntrlog.o         :mntrlog.f MNTRLOGD FRAMELP;             $(F77) -c $(FL2) -I./ $< -o $@
