--- a/tools/baseflow/sfd/makefile_usr.inc
+++ b/tools/baseflow/sfd/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/sfd.o             :sfd.f SFD CHKPTMSTPD CHKPOINTD;         $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/sfd.o             :sfd.f SFDD FRAMELP;         $(F77) -c $(FL2) -I./ $< -o $@
