--- a/tools/tstepper/arnoldi_arpack/makefile_usr.inc
+++ b/tools/tstepper/arnoldi_arpack/makefile_usr.inc
@@ -1,2 +1,2 @@
-$(OBJDIR)/arnoldi_arpack.o       :arnoldi_arpack.f;                   $(F77) -c $(FL2) -I./ $< -o $@
-$(OBJDIR)/arnoldi_arpack_io.o    :arnoldi_arpack_io.f;                $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/arn_arp.o         :arn_arp.f ARN_ARPD TSTEPPERD;           $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/arn_arp_io.o      :arn_arp_io.f ARN_ARPD TSTEPPERD;        $(F77) -c $(FL2) -I./ $< -o $@
