Renamed files/routines to split pstat2d and pstat3d

--- a/postprocessing/pstat3d/makefile_usr.inc
+++ b/postprocessing/pstat3d/makefile_usr.inc
@@ -1,2 +1,2 @@
-$(OBJDIR)/pstat.o           :pstat.f PSTATD FRAMELP;                 $(F77) -c $(FL2) -I./ $< -o $@
-$(OBJDIR)/pstat_IO.o        :pstat_IO.f PSTATD FRAMELP;              $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/pstat3D.o         :${PSTAT3D_SRC}/pstat3D.f;               $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/pstat3D_IO.o      :${PSTAT3D_SRC}/pstat3D_IO.f;            $(F77) -c $(FL2) $< -o $@
