--- a/postprocessing/pstat2d/makefile_usr.inc
+++ b/postprocessing/pstat2d/makefile_usr.inc
@@ -1,2 +1,2 @@
-$(OBJDIR)/pstat.o           :pstat.f PSTATD FRAMELP;                 $(F77) -c $(FL2) -I./ $< -o $@
-$(OBJDIR)/pstat_IO.o        :pstat_IO.f PSTATD FRAMELP;              $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/pstat2D.o         :${PSTAT2D_SRC}/pstat2D.f;               $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/pstat2D_IO.o      :${PSTAT2D_SRC}/pstat2D_IO.f;            $(F77) -c $(FL2) $< -o $@
