--- a/tools/tstepper/arnoldi_arpack/makefile_usr.inc
+++ b/tools/tstepper/arnoldi_arpack/makefile_usr.inc
@@ -1,2 +1,2 @@
-$(OBJDIR)/arn_arp.o         :arn_arp.f ARN_ARPD TSTEPPERD;           $(F77) -c $(FL2) -I./ $< -o $@
-$(OBJDIR)/arn_arp_io.o      :arn_arp_io.f ARN_ARPD TSTEPPERD;        $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/arn_arp.o         :$(ARNARP_SRC)/arn_arp.f ./ARN_ARPD;     $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/arn_arp_io.o      :$(ARNARP_SRC)/arn_arp_io.f ./ARN_ARPD;  $(F77) -c $(FL2) $< -o $@
