--- a/tools/tstepper/powerit/makefile_usr.inc
+++ b/tools/tstepper/powerit/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/powerit.o         :powerit.f POWERITD;                     $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/powerit.o         :$(POWERIT_SRC)/powerit.f;               $(F77) -c $(FL2) $< -o $@
