--- a/utility/conht/makefile_usr.inc
+++ b/utility/conht/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/conht_tools.o     :conht_tools.f CONHTD;                   $(F77) -c $(FL2) -I./ $< -o $@
+$(OBJDIR)/conht_tools.o     :$(CONHT_SRC)/conht_tools.f;             $(F77) -c $(FL2) $< -o $@
