Corrected compiler variable in makefile_usr.inc

--- a/driver/frame/makefile_usr.inc
+++ b/driver/frame/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/frame.o           :$(FRAME_SRC)/frame.f;                   $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/frame.o           :$(FRAME_SRC)/frame.f;                   $(FC) -c $(FL2) $< -o $@
