--- a/tools/stat/makefile_usr.inc
+++ b/tools/stat/makefile_usr.inc
@@ -1,2 +1,2 @@
-$(OBJDIR)/stat.o            :$(STAT_SRC)/stat.f ./STATD;             $(F77) -c $(FL2) $< -o $@
-$(OBJDIR)/stat_IO.o         :$(STAT_SRC)/stat_IO.f ./STATD;          $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/stat.o            :$(STAT_SRC)/stat.f ./STATD;             $(FC) -c $(FL2) $< -o $@
+$(OBJDIR)/stat_IO.o         :$(STAT_SRC)/stat_IO.f ./STATD;          $(FC) -c $(FL2) $< -o $@
