--- a/tools/tstpr/makefile_usr.inc
+++ b/tools/tstpr/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/tstpr.o           :$(TSTPR_SRC)/tstpr.f ./TSTPRD;          $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/tstpr.o           :$(TSTPR_SRC)/tstpr.f ./TSTPRD;          $(FC) -c $(FL2) $< -o $@
