--- a/utility/bcnd/gsyem/makefile_usr.inc
+++ b/utility/bcnd/gsyem/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/gSyEM.o           :$(GSYEM_SRC)/gSyEM.f ./GSYEMD;          $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/gSyEM.o           :$(GSYEM_SRC)/gSyEM.f ./GSYEMD;          $(FC) -c $(FL2) $< -o $@
