--- a/utility/cnht/makefile_usr.inc
+++ b/utility/cnht/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/cnht_tools.o      :$(CNHT_SRC)/cnht_tools.f;               $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/cnht_tools.o      :$(CNHT_SRC)/cnht_tools.f;               $(FC) -c $(FL2) $< -o $@
