--- a/utility/comm/makefile_usr.inc
+++ b/utility/comm/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/comm_mpi_wrp.o    :$(COMM_SRC)/comm_mpi_tool.f;            $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/comm_mpi_wrp.o    :$(COMM_SRC)/comm_mpi_tool.f;            $(FC) -c $(FL2) $< -o $@
