--- a/utility/forcing/nseb/makefile_usr.inc
+++ b/utility/forcing/nseb/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/nseb.o            :$(NSEB_SRC)/nseb.f;                     $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/nseb.o            :$(NSEB_SRC)/nseb.f;                     $(FC) -c $(FL2) $< -o $@
