--- a/utility/forcing/spnb/makefile_usr.inc
+++ b/utility/forcing/spnb/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/spnb.o            :$(SPNB_SRC)/spnb.f;                     $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/spnb.o            :$(SPNB_SRC)/spnb.f;                     $(FC) -c $(FL2) $< -o $@
