--- a/utility/math/makefile_usr.inc
+++ b/utility/math/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/math_tools.o      :$(MATH_SRC)/math_tools.f;               $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/math_tools.o      :$(MATH_SRC)/math_tools.f;               $(FC) -c $(FL2) $< -o $@
