--- a/driver/frame/rprm/makefile_usr.inc
+++ b/driver/frame/rprm/makefile_usr.inc
@@ -1,2 +1,2 @@
-$(OBJDIR)/rprm_block.o      :$(RPRM_SRC)/rprm_block.f;               $(F77) -c $(FL2) $< -o $@
-$(OBJDIR)/rprm.o            :$(RPRM_SRC)/rprm.f;                     $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/rprm_block.o      :$(RPRM_SRC)/rprm_block.f;               $(FC) -c $(FL2) $< -o $@
+$(OBJDIR)/rprm.o            :$(RPRM_SRC)/rprm.f;                     $(FC) -c $(FL2) $< -o $@
