--- a/io/checkpoint/mstep/makefile_usr.inc
+++ b/io/checkpoint/mstep/makefile_usr.inc
@@ -1,1 +1,1 @@
-$(OBJDIR)/chkpt_mstp.o      :$(CHKPTMS_SRC)/chkpt_mstp.f;            $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/chkpt_mstp.o      :$(CHKPTMS_SRC)/chkpt_mstp.f;            $(FC) -c $(FL2) $< -o $@
