--- a/tools/tsrs/makefile_usr.inc
+++ b/tools/tsrs/makefile_usr.inc
@@ -1,3 +1,3 @@
-$(OBJDIR)/tsrs.o              :$(TSRS_SRC)/tsrs.f ./TSRSD;              $(F77) -c $(FL2) $< -o $@
-$(OBJDIR)/tsrs_IO.o           :$(TSRS_SRC)/tsrs_IO.f ./TSRSD;           $(F77) -c $(FL2) $< -o $@
-$(OBJDIR)/pts_redistribute.o  :$(TSRS_SRC)/pts_redistribute.f ./TSRSD;  $(F77) -c $(FL2) $< -o $@
+$(OBJDIR)/tsrs.o              :$(TSRS_SRC)/tsrs.f ./TSRSD;              $(FC) -c $(FL2) $< -o $@
+$(OBJDIR)/tsrs_IO.o           :$(TSRS_SRC)/tsrs_IO.f ./TSRSD;           $(FC) -c $(FL2) $< -o $@
+$(OBJDIR)/pts_redistribute.o  :$(TSRS_SRC)/pts_redistribute.f ./TSRSD;  $(FC) -c $(FL2) $< -o $@
